# align4d

./: .gitignore  LICENSE  README.md  pyproject.toml
align4d/: align.py  align4d.cp310-win_amd64.pyd  align4d.cp311-win_amd64.pyd  align4d.py
align4d/cpp/: align.cpp  msa.cpp  postprocess.cpp  postprocess.h  preprocess.cpp  setup.py
cpp/: align.cpp  align.h  align4d_cpython_extension.cpp  msa.cpp  msa.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  setup.py
src/align4d/: align4d.cp310-win_amd64.pyd  align4d.py
